--- a/templates/casino/index.html.twig
+++ b/templates/casino/index.html.twig
@@ -22,21 +22,21 @@
                 <label for="red" class="block text-sm text-gray-200 font-medium">red</label>
                 <input type="number" name="red" min="1" max="{{ app.user.punkty }}" class="w-96 shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p-2 mt-1 mb-2 mr-2"/>
                     <div>
-                    <button type="submit" class="w-96 border dark:border-gray-100 rounded-md p-2 dark:bg-red-600 dark:border-transparent mt-2 mb-2 start">BET</button>
+                    <button type="submit" class="w-96 border dark:border-gray-100 rounded-md p-2 dark:bg-red-600 dark:border-transparent mt-2 mb-2 start btnred disabled">BET</button>
                     </div>
             </div>
             <div class="inline-block float-left">
                 <label for="green" class="block text-sm text-gray-200 font-medium">Green</label>
                 <input type="number" name="green" min="1" max="{{ app.user.punkty }}" class="w-96 shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p-2 mt-1 mb-2 mr-2"/>
                     <div>
-                    <button type="submit" class="w-96 border dark:border-gray-100 rounded-md p-2 dark:bg-green-600 dark:border-transparent mt-2 mb-2 start">BET</button>
+                    <button type="submit" class="w-96 border dark:border-gray-100 rounded-md p-2 dark:bg-green-600 dark:border-transparent mt-2 mb-2 start btngreen disabled">BET</button>
                     </div>
             </div>
             <div class="inline-block float-left">
                 <label for="black" class="block text-sm text-gray-200 font-medium">black</label>
                 <input type="number" name="black" min="1" max="{{ app.user.punkty }}" class="w-96 shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p-2 mt-1 mb-2 "/>
                     <div>
-                    <button type="submit" class="w-96 border dark:border-gray-100 rounded-md p-2 dark:bg-gray-800 dark:border-transparent mt-2 mb-2 start">BET</button>
+                    <button type="submit" class="w-96 border dark:border-gray-100 rounded-md p-2 dark:bg-gray-800 dark:border-transparent mt-2 mb-2 start btnblack disabled">BET</button>
                     </div>
             </div>    
         </div>
