--- a/templates/casino/index.html.twig
+++ b/templates/casino/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     
     <div class="place-items-center">
-        <h1 class="result dark:bg-gray-300 text-gray-500" id="result"></h1>
+        <h1 class="result" id="result"></h1>
        <div class="relative">
         
            <img src="{{ asset('images/rulette.png') }}" alt="rulette" class="w-1/2 m-auto rulette">
