--- a/templates/proflie/index.html.twig
+++ b/templates/proflie/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Profile!{% endblock %}
+{% block title %}add points!{% endblock %}
 
 {% block body %}
     <h1>Dodaj punkty</h1>
